--- a/skip_jum.html
+++ b/skip_jum.html
@@ -2,20 +2,157 @@
 <html>
   <head>
     <title>Skip_Jump: Platformer Game</title>
-    <script>
-      // Attributes of the player
-      var player = {
-        x: 200,
-        y: 200,
-        x_v: 0,
-        y_v: 0,
-        jump: true,
-        height: 20,
-        width: 20,
-      };
-    </script>
+    <h2>This is the start of a lovely Platformer Game</h2>
   </head>
-  <body>
-    <h2>This is the start of a lovely Plateformer Game</h2>
-  </body>
+  <canvas id="canvas"></canvas>
+  <script>
+    // Attributes of the player
+    var player = {
+      x: 200,
+      y: 200,
+      x_v: 0,
+      y_v: 0,
+      jump: true,
+      height: 49,
+      width: 20,
+    };
+    // The status of the arrow keys
+    var keys = {
+      right: false,
+      left: false,
+      up: false,
+    };
+    // The friction and gravity to show realistic movement
+    var gravity = 0.6;
+    var friction = 0.7;
+    //   The number of plateforms
+    var num = 3;
+    //  the plateforms
+    var platforms = [];
+    // Function to render the canvas
+    function renderCanvas() {
+      ctx.fillStyle = "#F080808";
+      ctx.fillRect(player.x - 20, player.y - 20, player.width, player.height);
+    }
+    // Function to render the player
+    function renderPlayer() {
+      ctx.fillStyle = "#F08080";
+      ctx.fillRect(player.x - 20, player.y - 20, player.width, player.height);
+    }
+    // Function to create plateforms
+    function createPlat() {
+      for (i = 0; i < num; i++) {
+        platforms.push({
+          x: 100 * i,
+          y: 200 + 30 * i,
+          width: 110,
+          height: 10,
+        });
+      }
+    }
+    // Function to render platforms
+    function renderPlat() {
+      ctx.fillStyle = "#45597E";
+      ctx.fillRect(
+        platforms[0].x,
+        platforms[0].y,
+        platforms[0].width,
+        platforms[0].height
+      );
+      ctx.fillRect(
+        platforms[1].x,
+        platforms[1].y,
+        platforms[1].width,
+        platforms[1].height
+      );
+    }
+    // This function is called when one of the arrow keys are pressed
+    function keydown(e) {
+      // 37 is the code for the left arrow key
+      if (e.keyCode === 37 || e.keyCode === 65) {
+        keys.left = true;
+      }
+      if (e.keyCode === 39 || e.keyCode === 68) {
+        keys.right = true;
+      }
+      if (e.keyCode === 38 || e.keyCode === 32) {
+        if (player.jump === false) {
+          player.y_v = -10;
+        }
+      }
+    }
+    // This function is called when the key is released
+    function keyup(e) {
+      if (e.keyCode === 37 || e.keyCode === 65) {
+        keys.left = false;
+      }
+      if (e.keyCode === 39 || e.keyCode === 68) {
+        keys.right = false;
+      }
+      if (e.keyCode === 38 || e.keyCode === 32) {
+        if (player.y_v < -2) {
+          player.y_v = -3;
+        }
+      }
+    }
+    // Rendering the elements
+    function loop() {
+      // If the player is not jumping apply the effect of friction
+      if (player.jump === false) {
+        player.x_v *= friction;
+      } else {
+        //   if player is in the air then apply the effect of gravity
+        player.y_v += gravity;
+      }
+      player.jump = true;
+      // if the left key is pressed, move the player to the left
+      if (keys.left) {
+        player.x -= 2.5;
+      }
+      // if the right key is pressed, move the player to the right
+      if (keys.right) {
+        player.x += 2.5;
+      }
+
+      //   updating the y and x coordinates of the player
+      player.y += player.y_v;
+      player.x += player.x_v;
+      // code that checks for collions with the platform
+      //   let i = -1;
+      //   if (
+      //     platforms[0].x < player.x &&
+      //     player.x < platforms[0].x + platforms[0].width &&
+      //     platforms[0].y < player.y &&
+      //     player.y < platforms[0].y + platforms[0].height
+      //   ) {
+      //     i = 0;
+      //   }
+      //   if (
+      //     platforms[1].x < player.x &&
+      //     player.x < platforms[1].x + platforms[1].width &&
+      //     platforms[1].y < player.y &&
+      //     player.y < platforms[1].y + platforms[1].height
+      //   ) {
+      //     i = 1;
+      //   }
+      //   if (i > -1) {
+      //     player.jump = false;
+      //     player.y = platforms[i].y;
+      //   }
+      renderCanvas();
+      renderPlayer();
+      renderPlat();
+    }
+    canvas = document.getElementById("canvas");
+    ctx = canvas.getContext("2d");
+    ctx.canvas.height = 270;
+    ctx.canvas.width = 470;
+    ctx.canvas.style.border = "thick solid #0000FF";
+    createPlat();
+    document.addEventListener("keydown", keydown);
+    document.addEventListener("keyup", keyup);
+    // Calling loop every 22 milliseconds to update the frame
+    setInterval(loop, 22);
+  </script>
+  <body></body>
 </html>
